tests/lean/2125.lean.expected.out
2125.lean:7:0-9:23: error: (kernel) invalid return type for 'C.c'
